--- a/templates/app1/author_redis_list.html
+++ b/templates/app1/author_redis_list.html
@@ -1,19 +1,13 @@
 <html>
 <head>
-  <title>Recipes</title>
+  <title>Author redis list</title>
 </head>
 <body>
-{% for recipe in authors %}
-  <h1>{{ recipe.name }}</h1>
-    <p>{{ recipe.desc }}</p>
-  <h2>Ingredients</h2>
-  <ul>
-    {% for ingredient in recipe.ingredient_set.all %}
-    <li>{{ ingredient.desc }}</li>
-    {% endfor %}
-  </ul>
-  <h2>Instructions</h2>
-    <p>{{ recipe.instructions }}</p>
+{% for book in books %}
+  <h3>{{ book.title }}</h3>
+    <!-- <p>{{ book.authors}}</p> -->
+    <p>{{ book.publisher }}</p>
+    <p>{{ book.publication_date }}</p>
 {% endfor %}
 </body>
 </html>
