show all data and search by name

--- a/templates/app1/authors_list.html
+++ b/templates/app1/authors_list.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<form>
-			<input id="q" name="q" type="text" placeholder="your search">
+			<input id="q_name" name="q_name" type="text" placeholder="your search">
 		</form>
 		<section class="ftco-section">
 			<div class="container">
