--- a/templates/app1/author_search.html
+++ b/templates/app1/author_search.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form>
-        <input id="q" name="q" type="text" placeholder="your search">
+        <input id="q_name" name="q_name" type="text" placeholder="your search">
     </form>
 
     {% for auth in post %} 
